force-app/main/default/objects/RTEvent__c/fields/Pre_registration_Form_details__c.field-meta.xml
<CustomField>
    <fullName>Pre_registration_Form_details__c</fullName>
    <description>Enter details regarding the order for a registration form.</description>
    <label>Pre-registration Form details</label>
    <type>TextArea</type>
</CustomField>