force-app/main/default/objects/RTEvent__c/fields/Previous_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reservation__c</fullName>
    <inlineHelpText>If available, enter this customer&apos;s previous reservation number.</inlineHelpText>
    <label>Previous Reservation</label>
    <length>12</length>
    <type>Text</type>
</CustomField>