force-app/main/default/objects/RTEvent__c/fields/Q_A__c.field-meta.xml
<CustomField>
    <fullName>Q_A__c</fullName>
    <description>**CAUTION - USED IN INTEGRATIONS**</description>
    <inlineHelpText>Will there be question and answer?</inlineHelpText>
    <label>Q&amp;A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>