force-app/main/default/objects/RTEvent__c/fields/Q_A_Addl_Info__c.field-meta.xml
<CustomField>
    <fullName>Q_A_Addl_Info__c</fullName>
    <description>How should callers be announced for Q&amp;A?</description>
    <label>Q&amp;A Addl Info</label>
    <type>TextArea</type>
</CustomField>