force-app/main/default/objects/RTEvent__c/fields/RA_Number__c.field-meta.xml
<CustomField>
    <fullName>RA_Number__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS
L3&#39;s ID tied to our access code.</description>
    <inlineHelpText>L3&#39;s ID mapped to the ReadyTalk access code for this event.</inlineHelpText>
    <label>RA ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>