force-app/main/default/objects/RTEvent__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <formula>RecordTypeId</formula>
    <label>Record Type ID</label>
    <type>Text</type>
</CustomField>