force-app/main/default/objects/RTEvent__c/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <description>Used for SSBA record types.</description>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>