force-app/main/default/objects/RTEvent__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <inlineHelpText>ReadyTalk and L3&apos;s Reservation ID
InterCall&apos;s Conference ID</inlineHelpText>
    <label>Confirmation Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>