force-app/main/default/objects/RTEvent__c/fields/ResPlus_Dial_In_Number__c.field-meta.xml
<CustomField>
    <fullName>ResPlus_Dial_In_Number__c</fullName>
    <label>ResPlus Dial-In Number</label>
    <type>Phone</type>
</CustomField>