force-app/main/default/objects/RTEvent__c/fields/RT_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Event_Type__c</fullName>
    <description>**CAUTION - USED IN INTEGRATIONS**
Lists Op-Assist values to select for Audio Services levels for the event.</description>
    <inlineHelpText>Choose the Audio Service Level for this Event.</inlineHelpText>
    <label>RT Audio Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>300 Port Call</fullName>
            </value>
            <value>
                <fullName>Operator Assisted Direct</fullName>
            </value>
            <value>
                <fullName>Operator Assisted Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>