force-app/main/default/objects/RTEvent__c/fields/Simulated_Live_Delivery2__c.field-meta.xml
<CustomField>
    <fullName>Simulated_Live_Delivery2__c</fullName>
    <label>Simulated Live Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>