force-app/main/default/objects/RTEvent__c/fields/Simulated_Live_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Simulated_Live_Delivery__c</fullName>
    <label>Simulated Live Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>