force-app/main/default/objects/RTEvent__c/fields/Simulive_Playback_URL__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Playback_URL__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Field to hold the client&#39;s Simulive Playback URL.</description>
    <inlineHelpText>Insert the client&#39;s Simulive Playback URL.  ReadyTalk Recording ONLY.</inlineHelpText>
    <label>Simulive Playback URL</label>
    <type>Url</type>
</CustomField>