force-app/main/default/objects/RTEvent__c/fields/Slide_Management_Hours__c.field-meta.xml
<CustomField>
    <fullName>Slide_Management_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Slide Management Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>