force-app/main/default/objects/RTEvent__c/fields/Speaker_Bio__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Bio__c</fullName>
    <label>Speaker Bio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>