force-app/main/default/objects/RTEvent__c/fields/Speaker_Code__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Code__c</fullName>
    <label>Speaker Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>