force-app/main/default/objects/RTEvent__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <description>Special instructions, notes, comments to be sent to L#(e.g. ECD login information, etc)</description>
    <inlineHelpText>Comments to Reservations Agent.</inlineHelpText>
    <label>Audio Provider Special Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>