force-app/main/default/objects/RTEvent__c/fields/Start_Time2__c.field-meta.xml
<CustomField>
    <fullName>Start_Time2__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Scheduled event start time.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>