force-app/main/default/objects/RTEvent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Select the status of the event.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>DUPLICATE</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Waiting to Close</fullName>
            </value>
            <value>
                <fullName>Waiting on Recording Edits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>