force-app/main/default/objects/RTEvent__c/fields/Support_Duration__c.field-meta.xml
<CustomField>
    <fullName>Support_Duration__c</fullName>
    <description>Mapped from Support Type for use in Email Templates</description>
    <inlineHelpText>Mapped from Support Type; If not mapped correctly, please update and let BizOps know.</inlineHelpText>
    <label>Support Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>15/15</fullName>
            </value>
            <value>
                <fullName>30/30</fullName>
            </value>
            <value>
                <fullName>30/60</fullName>
            </value>
            <value>
                <fullName>30/90</fullName>
            </value>
            <value>
                <fullName>45/30</fullName>
            </value>
            <value>
                <fullName>45/60</fullName>
            </value>
            <value>
                <fullName>45/90</fullName>
            </value>
            <value>
                <fullName>60/100</fullName>
            </value>
            <value>
                <fullName>60/30</fullName>
            </value>
            <value>
                <fullName>60/60</fullName>
            </value>
            <value>
                <fullName>60/90</fullName>
            </value>
            <value>
                <fullName>90/100</fullName>
            </value>
            <value>
                <fullName>90/30</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>