force-app/main/default/objects/RTEvent__c/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <description>**IF NEW SUPPORT TYPE ADDED NEEDS TO BE MAPPED IN PROCESS BUILDER TO THE APPROPRIATE SUPPORT DURATION**
CAUTION - USED IN INTEGRATIONS</description>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>100% - 15 min</fullName>
            </value>
            <value>
                <fullName>100% - 30/30</fullName>
            </value>
            <value>
                <fullName>100% - 30/30 - 15 min</fullName>
            </value>
            <value>
                <fullName>100% - 30/30 - 30 min</fullName>
            </value>
            <value>
                <fullName>100% - 30/30 - 45 min</fullName>
            </value>
            <value>
                <fullName>100% - 30/30 - 60 min</fullName>
            </value>
            <value>
                <fullName>100% - 30 min</fullName>
            </value>
            <value>
                <fullName>100% - 45 min</fullName>
            </value>
            <value>
                <fullName>100% - 60 min</fullName>
            </value>
            <value>
                <fullName>100% - None</fullName>
            </value>
            <value>
                <fullName>15/15</fullName>
            </value>
            <value>
                <fullName>30/30</fullName>
            </value>
            <value>
                <fullName>30/30 - 15 min</fullName>
            </value>
            <value>
                <fullName>30/30 - 30 min</fullName>
            </value>
            <value>
                <fullName>30/30 - 45 min</fullName>
            </value>
            <value>
                <fullName>30/30 - 60 min</fullName>
            </value>
            <value>
                <fullName>30/30 - None</fullName>
            </value>
            <value>
                <fullName>30/60</fullName>
            </value>
            <value>
                <fullName>30/90</fullName>
            </value>
            <value>
                <fullName>300 Port</fullName>
            </value>
            <value>
                <fullName>300 Port - None</fullName>
            </value>
            <value>
                <fullName>45/30</fullName>
            </value>
            <value>
                <fullName>45/60</fullName>
            </value>
            <value>
                <fullName>45/90</fullName>
            </value>
            <value>
                <fullName>60/100</fullName>
            </value>
            <value>
                <fullName>60/30</fullName>
            </value>
            <value>
                <fullName>60/60</fullName>
            </value>
            <value>
                <fullName>60/90</fullName>
            </value>
            <value>
                <fullName>90/100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>