force-app/main/default/objects/RTEvent__c/fields/Telephony_Lines__c.field-meta.xml
<CustomField>
    <fullName>Telephony_Lines__c</fullName>
    <label>Telephony Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>