force-app/main/default/objects/RTEvent__c/fields/TESTING_MOUNTAIN_END2__c.field-meta.xml
<CustomField>
    <fullName>TESTING_MOUNTAIN_END2__c</fullName>
    <formula>End_Time2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TESTING MOUNTAIN END</label>
    <type>DateTime</type>
</CustomField>