force-app/main/default/objects/RTEvent__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Time Zone of the Chairperson&#39;s location</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>