force-app/main/default/objects/RTEvent__c/fields/Time_Zone_Conversion_Details__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Conversion_Details__c</fullName>
    <defaultValue>&apos;N/A&apos;</defaultValue>
    <label>Time Zone Conversion Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>