force-app/main/default/objects/RTEvent__c/fields/Total_lines_reserved__c.field-meta.xml
<CustomField>
    <fullName>Total_lines_reserved__c</fullName>
    <description>Total number of International Toll Free Speaker and Participant dial in #&apos;s</description>
    <inlineHelpText>Total ITF lines requested (Spkr &amp; Part)</inlineHelpText>
    <label>Total ITF lines reserved</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>