force-app/main/default/objects/RTEvent__c/fields/Training_Notes__c.field-meta.xml
<CustomField>
    <fullName>Training_Notes__c</fullName>
    <label>Training Notes</label>
    <type>TextArea</type>
</CustomField>