force-app/main/default/objects/RTEvent__c/fields/Transcription__c.field-meta.xml
<CustomField>
    <fullName>Transcription__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Field denoting that transcription services for the event have been requested.</description>
    <inlineHelpText>Select &quot;Yes&quot; if the client has requested transcription services.</inlineHelpText>
    <label>Transcription</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>