force-app/main/default/objects/RTEvent__c/fields/Transcription_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Transcription_Turnaround_Time__c</fullName>
    <label>Transcription Turnaround Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>48 - Regular</fullName>
                <default>true</default>
                <label>48 - Regular</label>
            </value>
            <value>
                <fullName>24 - Priority</fullName>
            </value>
            <value>
                <fullName>12 - Express</fullName>
            </value>
            <value>
                <fullName>6 - Expedite</fullName>
            </value>
            <value>
                <fullName>3 - Rush</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>