force-app/main/default/objects/RTEvent__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio &amp; Slides</fullName>
            </value>
            <value>
                <fullName>Video &amp; Slides</fullName>
            </value>
            <value>
                <fullName>Standard Assist</fullName>
            </value>
            <value>
                <fullName>Premiere Assist</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Video + Slides - Onsite Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>