force-app/main/default/objects/RTEvent__c/fields/Use_of_Clearance_Line__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Clearance_Line__c</fullName>
    <description>ACAUTION - USED IN INTEGRATIONS
 clearance line is a feature that can be booked with premium level calls only. This line enables the chairperson to speak with an operator during pre-conference through the first 15 minutes of the call, to clear any participants on a restricted list</description>
    <inlineHelpText>Select &quot;Yes&quot; if a clearance line has been requested.</inlineHelpText>
    <label>Clearance Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>