force-app/main/default/objects/RTEvent__c/fields/Use_of_Communication_Line__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Communication_Line__c</fullName>
    <description>**CAUTION - USED IN INTEGRATIONS**
A communication line is a feature that can be booked with premium level calls only. This line enables the chairperson to speak with an operator during pre-conference through the entire duration of the call. This line could be used for troubleshooting and or Q&amp;A manipulation.</description>
    <inlineHelpText>Select &quot;Yes&quot; if a Communication Line has been requested.</inlineHelpText>
    <label>Comm Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>