force-app/main/default/objects/RTEvent__c/fields/Use_of_Post_survey_or_reminder_emails__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Post_survey_or_reminder_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Survey or Reminder Emails</label>
    <type>Checkbox</type>
</CustomField>