force-app/main/default/objects/RTEvent__c/fields/Use_of_restricted_list__c.field-meta.xml
<CustomField>
    <fullName>Use_of_restricted_list__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would the customer like to restrict the call to specific individuals?</description>
    <label>Use of restricted list</label>
    <type>Checkbox</type>
</CustomField>