force-app/main/default/objects/RTEvent__c/fields/Verification_List_Addl_Info__c.field-meta.xml
<CustomField>
    <fullName>Verification_List_Addl_Info__c</fullName>
    <description>What is the procedure if callers are not on the restricted list?</description>
    <inlineHelpText>What is the procedure if callers are not on the restricted list?</inlineHelpText>
    <label>Verification List Add&apos;l Info</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>