force-app/main/default/objects/RTEvent__c/fields/Video_Clips_up_to_5_minutes_in_length__c.field-meta.xml
<CustomField>
    <fullName>Video_Clips_up_to_5_minutes_in_length__c</fullName>
    <description>Video Clips (up to 5 minutes in length)</description>
    <inlineHelpText>Video Clips (up to 5 minutes in length)</inlineHelpText>
    <label>Video Clips (up to 5 minutes in length)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>