force-app/main/default/objects/RTEvent__c/fields/Web_Meeting_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Meeting_Registration_Type__c</fullName>
    <description>CVS use only.</description>
    <label>Web Meeting Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Registration</fullName>
            </value>
            <value>
                <fullName>Register at time of event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>