force-app/main/default/objects/RTEvent__c/fields/Web_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Sub_Type__c</fullName>
    <formula>text(Access_Code__r.Web_Sub_Default_Type__c)</formula>
    <inlineHelpText>Shows Web Subscription Type of access code requesting event.</inlineHelpText>
    <label>Web Sub Type</label>
    <type>Text</type>
</CustomField>