force-app/main/default/objects/RTEvent__c/fields/Web_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Type__c</fullName>
    <label>Web Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Meeting</fullName>
            </value>
            <value>
                <fullName>WebEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>