force-app/main/default/objects/RTEvent__c/fields/Webcasting_Event_Product__c.field-meta.xml
<CustomField>
    <fullName>Webcasting_Event_Product__c</fullName>
    <description>The Product Type and Intercall SKU for the webcasting event</description>
    <inlineHelpText>What type of Product is this webcasting being held on</inlineHelpText>
    <label>Webcasting Event Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managed Webcast</fullName>
            </value>
            <value>
                <fullName>Self-Serve Subscription</fullName>
            </value>
            <value>
                <fullName>SS16 - On-Demand Platinum Elite Webcast</fullName>
            </value>
            <value>
                <fullName>Video &amp; Slides</fullName>
            </value>
            <value>
                <fullName>Audio &amp; Slides</fullName>
            </value>
            <value>
                <fullName>SS15 - On-Demand Audio + Slides Webcast</fullName>
            </value>
            <value>
                <fullName>SS2 - Audio + Slides Webcast</fullName>
            </value>
            <value>
                <fullName>SS3 - Platinum Plus Webcast</fullName>
            </value>
            <value>
                <fullName>SS4 - Platinum Elite Webcast</fullName>
            </value>
            <value>
                <fullName>Webcam &amp; Slides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>