force-app/main/default/objects/RTEvent__c/recordTypes/Auto_Event.recordType-meta.xml
<RecordType>
    <fullName>Auto_Event</fullName>
    <active>true</active>
    <description>Record Type used for Auto Web &amp; Audio Services</description>
    <label>Auto Event</label>
</RecordType>