force-app/main/default/objects/RTEvent__c/recordTypes/Direct_Event.recordType-meta.xml
<RecordType>
    <fullName>Direct_Event</fullName>
    <active>true</active>
    <description>Record Type used for Direct Web &amp; Audio Services</description>
    <label>Direct Event</label>
</RecordType>