force-app/main/default/objects/RTEvent__c/recordTypes/Dry_Run.recordType-meta.xml
<RecordType>
    <fullName>Dry_Run</fullName>
    <active>true</active>
    <description>Record Type used to request a Dry Run</description>
    <label>Dry Run</label>
</RecordType>