force-app/main/default/objects/RTEvent__c/recordTypes/Gold_Event.recordType-meta.xml
<RecordType>
    <fullName>Gold_Event</fullName>
    <active>true</active>
    <description>Record Type used for Gold Event Packages</description>
    <label>Gold Event</label>
</RecordType>