force-app/main/default/objects/RTEvent__c/recordTypes/InterCall_Managed_Event.recordType-meta.xml
<RecordType>
    <fullName>InterCall_Managed_Event</fullName>
    <active>true</active>
    <description>Used for events routed to InterCall for Audio Service.</description>
    <label>InterCall-Managed Event</label>
</RecordType>