force-app/main/default/objects/RTEvent__c/recordTypes/L3_Dry_Run.recordType-meta.xml
<RecordType>
    <fullName>L3_Dry_Run</fullName>
    <active>true</active>
    <label>L3 Dry Run</label>
</RecordType>