force-app/main/default/objects/RTEvent__c/recordTypes/L3_Premium_Event.recordType-meta.xml
<RecordType>
    <fullName>L3_Premium_Event</fullName>
    <active>true</active>
    <label>L3 Premium Event</label>
</RecordType>