force-app/main/default/objects/RTEvent__c/recordTypes/L3_Standard_Event.recordType-meta.xml
<RecordType>
    <fullName>L3_Standard_Event</fullName>
    <active>false</active>
    <label>L3 Standard Event</label>
</RecordType>