force-app/main/default/objects/RTEvent__c/recordTypes/Managed_SSBA.recordType-meta.xml
<RecordType>
    <fullName>Managed_SSBA</fullName>
    <active>true</active>
    <label>Managed SSBA</label>
</RecordType>