force-app/main/default/objects/RTEvent__c/recordTypes/Manual_Simulive.recordType-meta.xml
<RecordType>
    <fullName>Manual_Simulive</fullName>
    <active>false</active>
    <label>Manual Simulive</label>
</RecordType>