force-app/main/default/objects/RTEvent__c/recordTypes/PGi_Event.recordType-meta.xml
<RecordType>
    <fullName>PGi_Event</fullName>
    <active>true</active>
    <label>PGi Event</label>
</RecordType>