force-app/main/default/objects/RTEvent__c/recordTypes/Platinum_Event.recordType-meta.xml
<RecordType>
    <fullName>Platinum_Event</fullName>
    <active>true</active>
    <description>Record Type used for Platinum Event Packages</description>
    <label>Platinum Event</label>
</RecordType>