force-app/main/default/objects/RTEvent__c/recordTypes/Pre_Record_Simulive.recordType-meta.xml
<RecordType>
    <fullName>Pre_Record_Simulive</fullName>
    <active>true</active>
    <label>Pre-Record Simulive</label>
</RecordType>