force-app/main/default/objects/RTEvent__c/recordTypes/Premium_Event.recordType-meta.xml
<RecordType>
    <fullName>Premium_Event</fullName>
    <active>true</active>
    <description>Record Type used for Premium Web &amp; Audio Services</description>
    <label>Premium Event</label>
</RecordType>