force-app/main/default/objects/RTEvent__c/recordTypes/Re_Record.recordType-meta.xml
<RecordType>
    <fullName>Re_Record</fullName>
    <active>true</active>
    <description>Re_Record Webinar</description>
    <label>Re-Record</label>
</RecordType>