force-app/main/default/objects/RTEvent__c/recordTypes/RT_Event.recordType-meta.xml
<RecordType>
    <fullName>RT_Event</fullName>
    <active>true</active>
    <description>Master for all RT Events</description>
    <label>RT Event</label>
</RecordType>