force-app/main/default/objects/RTEvent__c/recordTypes/SSBA.recordType-meta.xml
<RecordType>
    <fullName>SSBA</fullName>
    <active>true</active>
    <description>Used for SSBA events where the Event Team will be providing support.</description>
    <label>SSBA</label>
</RecordType>