force-app/main/default/objects/RTEvent__c/recordTypes/Stand_Alone.recordType-meta.xml
<RecordType>
    <fullName>Stand_Alone</fullName>
    <active>true</active>
    <description>Record Type used for Broadcast Audio Events for access codes NOT on a Webinar subscription</description>
    <label>Stand Alone</label>
</RecordType>