force-app/main/default/objects/RTEvent__c/recordTypes/Webcasting.recordType-meta.xml
<RecordType>
    <fullName>Webcasting</fullName>
    <active>true</active>
    <description>Intercall Managed Webcasts Events only</description>
    <label>Webcasting</label>
</RecordType>