force-app/main/default/objects/RTEvent__c/recordTypes/Webinar_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Webinar_Subscription</fullName>
    <active>true</active>
    <description>Record Type used for Access Codes on a Webinar subscription.</description>
    <label>Webinar Subscription</label>
</RecordType>