force-app/main/default/objects/RTEvent__c/recordTypes/X300_Port.recordType-meta.xml
<RecordType>
    <fullName>X300_Port</fullName>
    <active>true</active>
    <description>300 Port Events</description>
    <label>300 Port</label>
</RecordType>