force-app/main/default/objects/RTEvent__c/validationRules/BA_Event_Duration_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>BA_Event_Duration_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>Broadcast_Audio_Event_Duration2__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Broadcast_Audio_Event_Duration2__c</errorDisplayField>
    <errorMessage>Broadcast Audio Event duration may not be negative</errorMessage>
</ValidationRule>