force-app/main/default/objects/RTEvent__c/validationRules/Bill_to_Access_Code_req.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_to_Access_Code_req</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Bill_to_Access_Code__c )&amp;&amp; 
$RecordType.Name &lt;&gt;&quot;RT Event&quot;&amp;&amp; 
$RecordType.Name &lt;&gt;&quot;L3 Dry Run&quot;&amp;&amp; 
$RecordType.Name &lt;&gt;&quot;L3 Standard Event&quot;&amp;&amp; 
$RecordType.Name &lt;&gt;&quot;L3 Premium Event&quot;&amp;&amp; 
$RecordType.Name &lt;&gt;&quot;Personal&quot;</errorConditionFormula>
    <errorDisplayField>Bill_to_Access_Code__c</errorDisplayField>
    <errorMessage>Bill To AccessCode is required.</errorMessage>
</ValidationRule>